--- a/src/Untitled-1.ipynb
+++ b/src/Untitled-1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,24 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\chali\\AppData\\Local\\Temp\\ipykernel_9040\\142810006.py:36: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "C:\\Users\\chali\\AppData\\Local\\Temp\\ipykernel_15148\\3425522713.py:36: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(convert_to_volts)\n",
-      "C:\\Users\\chali\\AppData\\Local\\Temp\\ipykernel_9040\\142810006.py:36: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "C:\\Users\\chali\\AppData\\Local\\Temp\\ipykernel_15148\\3425522713.py:36: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(convert_to_volts)\n",
-      "C:\\Users\\chali\\AppData\\Local\\Temp\\ipykernel_9040\\142810006.py:36: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "C:\\Users\\chali\\AppData\\Local\\Temp\\ipykernel_15148\\3425522713.py:36: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(convert_to_volts)\n",
-      "C:\\Users\\chali\\AppData\\Local\\Temp\\ipykernel_9040\\142810006.py:36: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "C:\\Users\\chali\\AppData\\Local\\Temp\\ipykernel_15148\\3425522713.py:36: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(convert_to_volts)\n",
-      "C:\\Users\\chali\\AppData\\Local\\Temp\\ipykernel_9040\\142810006.py:36: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "C:\\Users\\chali\\AppData\\Local\\Temp\\ipykernel_15148\\3425522713.py:36: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(convert_to_volts)\n",
-      "C:\\Users\\chali\\AppData\\Local\\Temp\\ipykernel_9040\\142810006.py:36: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "C:\\Users\\chali\\AppData\\Local\\Temp\\ipykernel_15148\\3425522713.py:36: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df = df.applymap(convert_to_volts)\n"
      ]
     }
@@ -72,7 +72,7 @@
    "source": [
     "# Load Data from Excel Files\n",
     "\n",
-    "# List of file paths for the six Excel files\n",
+    "# List of file paths for the Excel files\n",
     "file_paths = [\n",
     "    '110.xlsx',\n",
     "    '140.xlsx',\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -376,62 +376,62 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[122], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m     dip_positions\u001b[38;5;241m.\u001b[39mappend(voltage[dips])\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Convert dip positions to numpy array for easier manipulation\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m dip_positions \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdip_positions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Plot the positions of the current dips against temperature\u001b[39;00m\n\u001b[0;32m     20\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m8\u001b[39m))\n",
+      "Cell \u001b[1;32mIn[16], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m     dip_positions\u001b[38;5;241m.\u001b[39mappend(voltage[dips])\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Convert dip positions to numpy array for easier manipulation\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m dip_positions \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdip_positions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Plot the positions of the current dips against temperature\u001b[39;00m\n\u001b[0;32m     20\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m8\u001b[39m))\n",
       "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (6,) + inhomogeneous part."
      ]
     }
    ],
    "source": [
-    "# Analyze Temperature Dependence\n",
+    "# # Analyze Temperature Dependence\n",
     "\n",
-    "# Extract the positions of the current dips for each temperature\n",
-    "dip_positions = []\n",
+    "# # Extract the positions of the current dips for each temperature\n",
+    "# dip_positions = []\n",
     "\n",
-    "for i in range(len(file_paths)):\n",
-    "    voltage = accelerator_voltage_data[i]\n",
-    "    current = collector_current_data[i]\n",
+    "# for i in range(len(file_paths)):\n",
+    "#     voltage = accelerator_voltage_data[i]\n",
+    "#     current = collector_current_data[i]\n",
     "    \n",
-    "    # Identify dips\n",
-    "    dips = identify_current_dips(voltage, current)\n",
+    "#     # Identify dips\n",
+    "#     dips = identify_current_dips(voltage, current)\n",
     "    \n",
-    "    # Store the positions of the dips\n",
-    "    dip_positions.append(voltage[dips])\n",
+    "#     # Store the positions of the dips\n",
+    "#     dip_positions.append(voltage[dips])\n",
     "\n",
-    "# Convert dip positions to numpy array for easier manipulation\n",
-    "dip_positions = np.array(dip_positions)\n",
+    "# # Convert dip positions to numpy array for easier manipulation\n",
+    "# dip_positions = np.array(dip_positions)\n",
     "\n",
-    "# Plot the positions of the current dips against temperature\n",
-    "plt.figure(figsize=(12, 8))\n",
+    "# # Plot the positions of the current dips against temperature\n",
+    "# plt.figure(figsize=(12, 8))\n",
     "\n",
-    "# Loop through each dip and plot its position against temperature\n",
-    "for dip_index in range(dip_positions.shape[1]):\n",
-    "    plt.plot(range(1, len(file_paths) + 1), dip_positions[:, dip_index], marker='o', label=f'Dip {dip_index + 1}')\n",
+    "# # Loop through each dip and plot its position against temperature\n",
+    "# for dip_index in range(dip_positions.shape[1]):\n",
+    "#     plt.plot(range(1, len(file_paths) + 1), dip_positions[:, dip_index], marker='o', label=f'Dip {dip_index + 1}')\n",
     "\n",
-    "# Add labels and title\n",
-    "plt.xlabel('Temperature Index')\n",
-    "plt.ylabel('Accelerator Voltage at Dip (V)')\n",
-    "plt.title('Temperature Dependence of Current Dips in Frank-Hertz Experiment')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()\n",
+    "# # Add labels and title\n",
+    "# plt.xlabel('Temperature Index')\n",
+    "# plt.ylabel('Accelerator Voltage at Dip (V)')\n",
+    "# plt.title('Temperature Dependence of Current Dips in Frank-Hertz Experiment')\n",
+    "# plt.legend()\n",
+    "# plt.grid(True)\n",
+    "# plt.show()\n",
     "\n",
-    "# Discuss the results\n",
-    "# Create a markdown cell to discuss the results\n",
-    "from IPython.display import Markdown, display\n",
+    "# # Discuss the results\n",
+    "# # Create a markdown cell to discuss the results\n",
+    "# from IPython.display import Markdown, display\n",
     "\n",
-    "discussion_text = \"\"\"\n",
-    "### Discussion\n",
+    "# discussion_text = \"\"\"\n",
+    "# ### Discussion\n",
     "\n",
-    "The plot above shows the positions of the current dips as a function of temperature. Each line represents a different dip in the collector current. By analyzing these plots, we can observe how the positions of the dips change with temperature. This information can provide insights into the energy loss mechanisms of electrons in the Frank-Hertz experiment.\n",
+    "# The plot above shows the positions of the current dips as a function of temperature. Each line represents a different dip in the collector current. By analyzing these plots, we can observe how the positions of the dips change with temperature. This information can provide insights into the energy loss mechanisms of electrons in the Frank-Hertz experiment.\n",
     "\n",
-    "Key observations:\n",
-    "- The positions of the dips may shift with temperature, indicating changes in the energy levels or collision processes.\n",
-    "- The trend of the shifts can help us understand the temperature dependence of the electron energy loss.\n",
+    "# Key observations:\n",
+    "# - The positions of the dips may shift with temperature, indicating changes in the energy levels or collision processes.\n",
+    "# - The trend of the shifts can help us understand the temperature dependence of the electron energy loss.\n",
     "\n",
-    "Further analysis can involve fitting the data to theoretical models to quantify the temperature dependence and compare it with expected results.\n",
-    "\"\"\"\n",
+    "# Further analysis can involve fitting the data to theoretical models to quantify the temperature dependence and compare it with expected results.\n",
+    "# \"\"\"\n",
     "\n",
-    "display(Markdown(discussion_text))"
+    "# display(Markdown(discussion_text))"
    ]
   }
  ],
